--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -47,7 +47,7 @@
 </div>
 <div class="alert alert-warning alert-dismissible" th:if="${warning != null}">
     <label th:text="${warning}"></label>
-    <button type="button" data-dismiss="alert">&times;</button>
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
 
 <div class="container mt-2">
